src/com/eiffel/Eiffel.bnf
{
  parserClass="com.eiffel.parser.EiffelParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Eiffel"
  psiImplClassSuffix="Impl"
  psiPackage="com.eiffel.psi"
  psiImplPackage="com.eiffel.psi.impl"

  elementTypeHolderClass="com.eiffel.psi.EiffelTypes"
  elementTypeClass="com.eiffel.pci.EiffelElementType"
  tokenTypeClass="com.eiffel.pci.EiffelTokenType"
}

eiffelFile ::= COMMENT* class_declaration COMMENT*

class_declaration ::= class_header

class_header ::= header_mark? CLASS_KEYWORD IDENTIFIER
header_mark ::= (DEFERRED_KEYWORD|EXPANDED_KEYWORD|FROZEN_KEYWORD)
