gen/com/eiffel/parser/EiffelParser.java
// This is a generated file. Not intended for manual editing.
package com.eiffel.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.eiffel.psi.EiffelTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class EiffelParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACTUAL_GENERICS) {
      r = actual_generics(b, 0);
    }
    else if (t == ACTUAL_LIST) {
      r = actual_list(b, 0);
    }
    else if (t == ACTUALS) {
      r = actuals(b, 0);
    }
    else if (t == ADDRESS) {
      r = address(b, 0);
    }
    else if (t == AGENT) {
      r = agent(b, 0);
    }
    else if (t == AGENT_ACTUAL) {
      r = agent_actual(b, 0);
    }
    else if (t == AGENT_ACTUAL_LIST) {
      r = agent_actual_list(b, 0);
    }
    else if (t == AGENT_ACTUALS) {
      r = agent_actuals(b, 0);
    }
    else if (t == AGENT_QUALIFIED) {
      r = agent_qualified(b, 0);
    }
    else if (t == AGENT_TARGET) {
      r = agent_target(b, 0);
    }
    else if (t == AGENT_UNQUALIFIED) {
      r = agent_unqualified(b, 0);
    }
    else if (t == ALIAS) {
      r = alias(b, 0);
    }
    else if (t == ALIAS_NAME) {
      r = alias_name(b, 0);
    }
    else if (t == ANCHOR) {
      r = anchor(b, 0);
    }
    else if (t == ANCHORED) {
      r = anchored(b, 0);
    }
    else if (t == ASSERTION) {
      r = assertion(b, 0);
    }
    else if (t == ASSERTION_CLAUSE) {
      r = assertion_clause(b, 0);
    }
    else if (t == ASSIGNER_CALL) {
      r = assigner_call(b, 0);
    }
    else if (t == ASSIGNER_MARK) {
      r = assigner_mark(b, 0);
    }
    else if (t == ASSIGNMENT) {
      r = assignment(b, 0);
    }
    else if (t == ATTACHMENT_MARK) {
      r = attachment_mark(b, 0);
    }
    else if (t == ATTRIBUTE) {
      r = attribute(b, 0);
    }
    else if (t == ATTRIBUTE_OR_ROUTINE) {
      r = attribute_or_routine(b, 0);
    }
    else if (t == BASIC_EXPRESSION) {
      r = basic_expression(b, 0);
    }
    else if (t == BASIC_EXPRESSION_NO_LEFT) {
      r = basic_expression_no_left(b, 0);
    }
    else if (t == BINARY) {
      r = binary(b, 0);
    }
    else if (t == BINARY_EXPRESSION) {
      r = binary_expression(b, 0);
    }
    else if (t == BOOLEAN_CONSTANT) {
      r = boolean_constant(b, 0);
    }
    else if (t == BOOLEAN_EXPRESSION) {
      r = boolean_expression(b, 0);
    }
    else if (t == BOOLEAN_LOOP) {
      r = boolean_loop(b, 0);
    }
    else if (t == BRACKET) {
      r = bracket(b, 0);
    }
    else if (t == BRACKET_EXPRESSION) {
      r = bracket_expression(b, 0);
    }
    else if (t == BRACKET_TARGET) {
      r = bracket_target(b, 0);
    }
    else if (t == CALL) {
      r = call(b, 0);
    }
    else if (t == CALL_AGENT) {
      r = call_agent(b, 0);
    }
    else if (t == CALL_AGENT_BODY) {
      r = call_agent_body(b, 0);
    }
    else if (t == CHARACTER_CONSTANT) {
      r = character_constant(b, 0);
    }
    else if (t == CHECK) {
      r = check(b, 0);
    }
    else if (t == CHOICE) {
      r = choice(b, 0);
    }
    else if (t == CHOICES) {
      r = choices(b, 0);
    }
    else if (t == CLASS_DECLARATION) {
      r = class_declaration(b, 0);
    }
    else if (t == CLASS_HEADER) {
      r = class_header(b, 0);
    }
    else if (t == CLASS_LIST) {
      r = class_list(b, 0);
    }
    else if (t == CLASS_NAME) {
      r = class_name(b, 0);
    }
    else if (t == CLASS_OR_TUPLE_TYPE) {
      r = class_or_tuple_type(b, 0);
    }
    else if (t == CLASS_TYPE) {
      r = class_type(b, 0);
    }
    else if (t == CLIENTS) {
      r = clients(b, 0);
    }
    else if (t == COMMENT) {
      r = comment(b, 0);
    }
    else if (t == COMPARISON) {
      r = comparison(b, 0);
    }
    else if (t == COMPOUND) {
      r = compound(b, 0);
    }
    else if (t == COMPOUND_WITHOUT_LOOP) {
      r = compound_without_loop(b, 0);
    }
    else if (t == CONDITIONAL) {
      r = conditional(b, 0);
    }
    else if (t == CONSTANT) {
      r = constant(b, 0);
    }
    else if (t == CONSTANT_ATTRIBUTE) {
      r = constant_attribute(b, 0);
    }
    else if (t == CONSTANT_INTERVAL) {
      r = constant_interval(b, 0);
    }
    else if (t == CONSTRAINING_TYPES) {
      r = constraining_types(b, 0);
    }
    else if (t == CONSTRAINT) {
      r = constraint(b, 0);
    }
    else if (t == CONSTRAINT_CREATORS) {
      r = constraint_creators(b, 0);
    }
    else if (t == CONSTRAINT_LIST) {
      r = constraint_list(b, 0);
    }
    else if (t == CONVERSION_PROCEDURE) {
      r = conversion_procedure(b, 0);
    }
    else if (t == CONVERSION_QUERY) {
      r = conversion_query(b, 0);
    }
    else if (t == CONVERTER) {
      r = converter(b, 0);
    }
    else if (t == CONVERTER_LIST) {
      r = converter_list(b, 0);
    }
    else if (t == CONVERTERS) {
      r = converters(b, 0);
    }
    else if (t == CREATION_CALL) {
      r = creation_call(b, 0);
    }
    else if (t == CREATION_CLAUSE) {
      r = creation_clause(b, 0);
    }
    else if (t == CREATION_EXPRESSION) {
      r = creation_expression(b, 0);
    }
    else if (t == CREATION_INSTRUCTION) {
      r = creation_instruction(b, 0);
    }
    else if (t == CREATION_PROCEDURE) {
      r = creation_procedure(b, 0);
    }
    else if (t == CREATION_PROCEDURE_LIST) {
      r = creation_procedure_list(b, 0);
    }
    else if (t == CREATORS) {
      r = creators(b, 0);
    }
    else if (t == DEBUG) {
      r = debug(b, 0);
    }
    else if (t == DECLARATION_BODY) {
      r = declaration_body(b, 0);
    }
    else if (t == DEFERRED) {
      r = deferred(b, 0);
    }
    else if (t == EFFECTIVE_ROUTINE) {
      r = effective_routine(b, 0);
    }
    else if (t == ELSE_PART) {
      r = else_part(b, 0);
    }
    else if (t == ENTITY) {
      r = entity(b, 0);
    }
    else if (t == ENTITY_DECLARATION_GROUP) {
      r = entity_declaration_group(b, 0);
    }
    else if (t == ENTITY_DECLARATION_LIST) {
      r = entity_declaration_list(b, 0);
    }
    else if (t == EQUALITY) {
      r = equality(b, 0);
    }
    else if (t == EXIT_CONDITION) {
      r = exit_condition(b, 0);
    }
    else if (t == EXPLICIT_CREATION_CALL) {
      r = explicit_creation_call(b, 0);
    }
    else if (t == EXPLICIT_CREATION_TYPE) {
      r = explicit_creation_type(b, 0);
    }
    else if (t == EXPLICIT_VALUE) {
      r = explicit_value(b, 0);
    }
    else if (t == EXPRESSION) {
      r = expression(b, 0);
    }
    else if (t == EXPRESSION_LIST) {
      r = expression_list(b, 0);
    }
    else if (t == EXT) {
      r = ext(b, 0);
    }
    else if (t == EXTENDED_FEATURE_NAME) {
      r = extended_feature_name(b, 0);
    }
    else if (t == EXTERNAL_ARGUMENT_TYPES) {
      r = external_argument_types(b, 0);
    }
    else if (t == EXTERNAL_FILE) {
      r = external_file(b, 0);
    }
    else if (t == EXTERNAL_FILE_LIST) {
      r = external_file_list(b, 0);
    }
    else if (t == EXTERNAL_FILE_USE) {
      r = external_file_use(b, 0);
    }
    else if (t == EXTERNAL_LANGUAGE) {
      r = external_language(b, 0);
    }
    else if (t == EXTERNAL_NAME) {
      r = external_name(b, 0);
    }
    else if (t == EXTERNAL_SIGNATURE) {
      r = external_signature(b, 0);
    }
    else if (t == EXTERNAL_SYSTEM_FILE) {
      r = external_system_file(b, 0);
    }
    else if (t == EXTERNAL_TYPE) {
      r = external_type(b, 0);
    }
    else if (t == EXTERNAL_TYPE_LIST) {
      r = external_type_list(b, 0);
    }
    else if (t == EXTERNAL_USER_FILE) {
      r = external_user_file(b, 0);
    }
    else if (t == FEATURE_ADAPTION) {
      r = feature_adaption(b, 0);
    }
    else if (t == FEATURE_BODY) {
      r = feature_body(b, 0);
    }
    else if (t == FEATURE_CLAUSE) {
      r = feature_clause(b, 0);
    }
    else if (t == FEATURE_DECLARATION) {
      r = feature_declaration(b, 0);
    }
    else if (t == FEATURE_DECLARATION_LIST) {
      r = feature_declaration_list(b, 0);
    }
    else if (t == FEATURE_LIST) {
      r = feature_list(b, 0);
    }
    else if (t == FEATURE_NAME) {
      r = feature_name(b, 0);
    }
    else if (t == FEATURE_SET) {
      r = feature_set(b, 0);
    }
    else if (t == FEATURE_VALUE) {
      r = feature_value(b, 0);
    }
    else if (t == FEATURES) {
      r = features(b, 0);
    }
    else if (t == FORMAL) {
      r = formal(b, 0);
    }
    else if (t == FORMAL_ARGUMENTS) {
      r = formal_arguments(b, 0);
    }
    else if (t == FORMAL_GENERIC) {
      r = formal_generic(b, 0);
    }
    else if (t == FORMAL_GENERIC_LIST) {
      r = formal_generic_list(b, 0);
    }
    else if (t == FORMAL_GENERIC_NAME) {
      r = formal_generic_name(b, 0);
    }
    else if (t == FORMAL_GENERICS) {
      r = formal_generics(b, 0);
    }
    else if (t == HEADER_COMMENT) {
      r = header_comment(b, 0);
    }
    else if (t == HEADER_MARK) {
      r = header_mark(b, 0);
    }
    else if (t == IDENTIFIER_LIST) {
      r = identifier_list(b, 0);
    }
    else if (t == INHERIT_CLAUSE) {
      r = inherit_clause(b, 0);
    }
    else if (t == INHERITANCE) {
      r = inheritance(b, 0);
    }
    else if (t == INITIALIZATION) {
      r = initialization(b, 0);
    }
    else if (t == INLINE_AGENT) {
      r = inline_agent(b, 0);
    }
    else if (t == INSTRUCTION) {
      r = instruction(b, 0);
    }
    else if (t == INSTRUCTION_WITHOUT_LOOP) {
      r = instruction_without_loop(b, 0);
    }
    else if (t == INTEGER_CONSTANT) {
      r = integer_constant(b, 0);
    }
    else if (t == INTERNAL) {
      r = internal(b, 0);
    }
    else if (t == INVARIANT) {
      r = invariant(b, 0);
    }
    else if (t == ITERATION) {
      r = iteration(b, 0);
    }
    else if (t == KEY_LIST) {
      r = key_list(b, 0);
    }
    else if (t == LOCAL) {
      r = local(b, 0);
    }
    else if (t == LOCAL_DECLARATIONS) {
      r = local_declarations(b, 0);
    }
    else if (t == LOOP) {
      r = loop(b, 0);
    }
    else if (t == LOOP_BODY) {
      r = loop_body(b, 0);
    }
    else if (t == MANIFEST_CONSTANT) {
      r = manifest_constant(b, 0);
    }
    else if (t == MANIFEST_STRING) {
      r = manifest_string(b, 0);
    }
    else if (t == MANIFEST_TUPLE) {
      r = manifest_tuple(b, 0);
    }
    else if (t == MANIFEST_TYPE) {
      r = manifest_type(b, 0);
    }
    else if (t == MANIFEST_VALUE) {
      r = manifest_value(b, 0);
    }
    else if (t == MESSAGE) {
      r = message(b, 0);
    }
    else if (t == MULTI_BRANCH) {
      r = multi_branch(b, 0);
    }
    else if (t == MULTIPLE_CONSTRAINT) {
      r = multiple_constraint(b, 0);
    }
    else if (t == NEW_EXPORT_ITEM) {
      r = new_export_item(b, 0);
    }
    else if (t == NEW_EXPORT_LIST) {
      r = new_export_list(b, 0);
    }
    else if (t == NEW_EXPORTS) {
      r = new_exports(b, 0);
    }
    else if (t == NEW_FEATURE) {
      r = new_feature(b, 0);
    }
    else if (t == NEW_FEATURE_LIST) {
      r = new_feature_list(b, 0);
    }
    else if (t == NON_CONFORMANCE) {
      r = non_conformance(b, 0);
    }
    else if (t == NON_OBJECT_CALL) {
      r = non_object_call(b, 0);
    }
    else if (t == NOTE_ENTRY) {
      r = note_entry(b, 0);
    }
    else if (t == NOTE_ITEM) {
      r = note_item(b, 0);
    }
    else if (t == NOTE_LIST) {
      r = note_list(b, 0);
    }
    else if (t == NOTE_NAME) {
      r = note_name(b, 0);
    }
    else if (t == NOTE_VALUES) {
      r = note_values(b, 0);
    }
    else if (t == NOTES) {
      r = notes(b, 0);
    }
    else if (t == OBJECT_CALL) {
      r = object_call(b, 0);
    }
    else if (t == OBJECT_TEST) {
      r = object_test(b, 0);
    }
    else if (t == OBSOLETE) {
      r = obsolete(b, 0);
    }
    else if (t == OLD) {
      r = old(b, 0);
    }
    else if (t == ONCE) {
      r = once(b, 0);
    }
    else if (t == ONCE_STRING) {
      r = once_string(b, 0);
    }
    else if (t == ONLY) {
      r = only(b, 0);
    }
    else if (t == OPERATOR) {
      r = operator(b, 0);
    }
    else if (t == OPERATOR_EXPRESSION) {
      r = operator_expression(b, 0);
    }
    else if (t == PARENT) {
      r = parent(b, 0);
    }
    else if (t == PARENT_LIST) {
      r = parent_list(b, 0);
    }
    else if (t == PARENT_QUALIFICATION) {
      r = parent_qualification(b, 0);
    }
    else if (t == PARENTHESIZED) {
      r = parenthesized(b, 0);
    }
    else if (t == PLACEHOLDER) {
      r = placeholder(b, 0);
    }
    else if (t == POSTCONDITION) {
      r = postcondition(b, 0);
    }
    else if (t == PRECONDITION) {
      r = precondition(b, 0);
    }
    else if (t == PRECURSOR) {
      r = precursor(b, 0);
    }
    else if (t == QUERY_MARK) {
      r = query_mark(b, 0);
    }
    else if (t == READ_ONLY) {
      r = read_only(b, 0);
    }
    else if (t == REAL_CONSTANT) {
      r = real_constant(b, 0);
    }
    else if (t == REDEFINE) {
      r = redefine(b, 0);
    }
    else if (t == REGISTERED_LANGUAGE) {
      r = registered_language(b, 0);
    }
    else if (t == RENAME) {
      r = rename(b, 0);
    }
    else if (t == RENAME_LIST) {
      r = rename_list(b, 0);
    }
    else if (t == RENAME_PAIR) {
      r = rename_pair(b, 0);
    }
    else if (t == RENAMING) {
      r = renaming(b, 0);
    }
    else if (t == RESCUE) {
      r = rescue(b, 0);
    }
    else if (t == RETRY) {
      r = retry(b, 0);
    }
    else if (t == ROUTINE_MARK) {
      r = routine_mark(b, 0);
    }
    else if (t == SELECT) {
      r = select(b, 0);
    }
    else if (t == SINGLE_CONSTRAINT) {
      r = single_constraint(b, 0);
    }
    else if (t == SPECIAL_EXPRESSION) {
      r = special_expression(b, 0);
    }
    else if (t == TAG) {
      r = tag(b, 0);
    }
    else if (t == TAG_MARK) {
      r = tag_mark(b, 0);
    }
    else if (t == TARGET) {
      r = target(b, 0);
    }
    else if (t == TARGET_NO_LEFT) {
      r = target_no_left(b, 0);
    }
    else if (t == THEN_PART) {
      r = then_part(b, 0);
    }
    else if (t == THEN_PART_LIST) {
      r = then_part_list(b, 0);
    }
    else if (t == TUPLE_PARAMETER_LIST) {
      r = tuple_parameter_list(b, 0);
    }
    else if (t == TUPLE_PARAMETERS) {
      r = tuple_parameters(b, 0);
    }
    else if (t == TUPLE_TYPE) {
      r = tuple_type(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == TYPE_INTERVAL) {
      r = type_interval(b, 0);
    }
    else if (t == TYPE_LIST) {
      r = type_list(b, 0);
    }
    else if (t == TYPE_MARK) {
      r = type_mark(b, 0);
    }
    else if (t == UNARY) {
      r = unary(b, 0);
    }
    else if (t == UNARY_EXPRESSION) {
      r = unary_expression(b, 0);
    }
    else if (t == UNDEFINE) {
      r = undefine(b, 0);
    }
    else if (t == UNLABELED_ASSERTION_CLAUSE) {
      r = unlabeled_assertion_clause(b, 0);
    }
    else if (t == UNQUALIFIED_CALL) {
      r = unqualified_call(b, 0);
    }
    else if (t == UNREGISTERED_LANGUAGE) {
      r = unregistered_language(b, 0);
    }
    else if (t == VARIABLE) {
      r = variable(b, 0);
    }
    else if (t == VARIABLE_ATTRIBUTE) {
      r = variable_attribute(b, 0);
    }
    else if (t == VARIANT) {
      r = variant(b, 0);
    }
    else if (t == WHEN_PART) {
      r = when_part(b, 0);
    }
    else if (t == WHEN_PART_LIST) {
      r = when_part_list(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return eiffelFile(b, l + 1);
  }

  /* ********************************************************** */
  // LEFT_SQUARE_BRACKET type_list RIGHT_SQUARE_BRACKET
  public static boolean actual_generics(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actual_generics")) return false;
    if (!nextTokenIs(b, LEFT_SQUARE_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_SQUARE_BRACKET);
    r = r && type_list(b, l + 1);
    r = r && consumeToken(b, RIGHT_SQUARE_BRACKET);
    exit_section_(b, m, ACTUAL_GENERICS, r);
    return r;
  }

  /* ********************************************************** */
  // expression (COMMA expression)*
  public static boolean actual_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actual_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTUAL_LIST, "<actual list>");
    r = expression(b, l + 1);
    r = r && actual_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean actual_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actual_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!actual_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "actual_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA expression
  private static boolean actual_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actual_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_PAREN actual_list RIGHT_PAREN
  public static boolean actuals(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actuals")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && actual_list(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ACTUALS, r);
    return r;
  }

  /* ********************************************************** */
  // DOLLAR variable
  public static boolean address(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "address")) return false;
    if (!nextTokenIs(b, DOLLAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOLLAR);
    r = r && variable(b, l + 1);
    exit_section_(b, m, ADDRESS, r);
    return r;
  }

  /* ********************************************************** */
  // call_agent | inline_agent
  public static boolean agent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent")) return false;
    if (!nextTokenIs(b, AGENT_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = call_agent(b, l + 1);
    if (!r) r = inline_agent(b, l + 1);
    exit_section_(b, m, AGENT, r);
    return r;
  }

  /* ********************************************************** */
  // expression | placeholder
  public static boolean agent_actual(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_actual")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGENT_ACTUAL, "<agent actual>");
    r = expression(b, l + 1);
    if (!r) r = placeholder(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // agent_actual (COMMA agent_actual)*
  public static boolean agent_actual_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_actual_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGENT_ACTUAL_LIST, "<agent actual list>");
    r = agent_actual(b, l + 1);
    r = r && agent_actual_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA agent_actual)*
  private static boolean agent_actual_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_actual_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!agent_actual_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "agent_actual_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA agent_actual
  private static boolean agent_actual_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_actual_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && agent_actual(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_PAREN agent_actual_list RIGHT_PAREN
  public static boolean agent_actuals(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_actuals")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && agent_actual_list(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, AGENT_ACTUALS, r);
    return r;
  }

  /* ********************************************************** */
  // agent_target DOT agent_unqualified
  public static boolean agent_qualified(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_qualified")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGENT_QUALIFIED, "<agent qualified>");
    r = agent_target(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && agent_unqualified(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // entity | parenthesized | manifest_type
  public static boolean agent_target(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_target")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGENT_TARGET, "<agent target>");
    r = entity(b, l + 1);
    if (!r) r = parenthesized(b, l + 1);
    if (!r) r = manifest_type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // feature_name [agent_actuals]
  public static boolean agent_unqualified(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_unqualified")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = feature_name(b, l + 1);
    r = r && agent_unqualified_1(b, l + 1);
    exit_section_(b, m, AGENT_UNQUALIFIED, r);
    return r;
  }

  // [agent_actuals]
  private static boolean agent_unqualified_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "agent_unqualified_1")) return false;
    agent_actuals(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ALIAS_KEYWORD DQUOTE alias_name DQUOTE [CONVERT_KEYWORD]
  public static boolean alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias")) return false;
    if (!nextTokenIs(b, ALIAS_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ALIAS_KEYWORD, DQUOTE);
    r = r && alias_name(b, l + 1);
    r = r && consumeToken(b, DQUOTE);
    r = r && alias_4(b, l + 1);
    exit_section_(b, m, ALIAS, r);
    return r;
  }

  // [CONVERT_KEYWORD]
  private static boolean alias_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_4")) return false;
    consumeToken(b, CONVERT_KEYWORD);
    return true;
  }

  /* ********************************************************** */
  // operator | bracket
  public static boolean alias_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_NAME, "<alias name>");
    r = operator(b, l + 1);
    if (!r) r = bracket(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // feature_name | CURRENT_KEYWORD
  public static boolean anchor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anchor")) return false;
    if (!nextTokenIs(b, "<anchor>", CURRENT_KEYWORD, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANCHOR, "<anchor>");
    r = feature_name(b, l + 1);
    if (!r) r = consumeToken(b, CURRENT_KEYWORD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [attachment_mark] LIKE_KEYWORD anchor
  public static boolean anchored(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anchored")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANCHORED, "<anchored>");
    r = anchored_0(b, l + 1);
    r = r && consumeToken(b, LIKE_KEYWORD);
    r = r && anchor(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [attachment_mark]
  private static boolean anchored_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anchored_0")) return false;
    attachment_mark(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // (assertion_clause SEMICOLON?)*
  public static boolean assertion(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion")) return false;
    Marker m = enter_section_(b, l, _NONE_, ASSERTION, "<assertion>");
    int c = current_position_(b);
    while (true) {
      if (!assertion_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "assertion", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // assertion_clause SEMICOLON?
  private static boolean assertion_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = assertion_clause(b, l + 1);
    r = r && assertion_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SEMICOLON?
  private static boolean assertion_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_0_1")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  /* ********************************************************** */
  // [tag_mark] unlabeled_assertion_clause
  public static boolean assertion_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_clause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSERTION_CLAUSE, "<assertion clause>");
    r = assertion_clause_0(b, l + 1);
    r = r && unlabeled_assertion_clause(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [tag_mark]
  private static boolean assertion_clause_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assertion_clause_0")) return false;
    tag_mark(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // expression ASSIGN expression
  public static boolean assigner_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assigner_call")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNER_CALL, "<assigner call>");
    r = expression(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ASSIGN_KEYWORD feature_name
  public static boolean assigner_mark(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assigner_mark")) return false;
    if (!nextTokenIs(b, ASSIGN_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN_KEYWORD);
    r = r && feature_name(b, l + 1);
    exit_section_(b, m, ASSIGNER_MARK, r);
    return r;
  }

  /* ********************************************************** */
  // variable ASSIGN expression
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    if (!nextTokenIs(b, "<assignment>", IDENTIFIER, RESULT_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = variable(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // QUESTION | EXCLAMATION
  public static boolean attachment_mark(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attachment_mark")) return false;
    if (!nextTokenIs(b, "<attachment mark>", EXCLAMATION, QUESTION)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTACHMENT_MARK, "<attachment mark>");
    r = consumeToken(b, QUESTION);
    if (!r) r = consumeToken(b, EXCLAMATION);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ATTRIBUTE_KEYWORD compound
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    if (!nextTokenIs(b, ATTRIBUTE_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATTRIBUTE_KEYWORD);
    r = r && compound(b, l + 1);
    exit_section_(b, m, ATTRIBUTE, r);
    return r;
  }
